# Optymalizacja_projekty

./: .gitignore  CMakeLists.txt  Laby.sln  Laby.vcxproj  main.cpp  matrix.cpp  ode_solver.h  opt_alg.cpp  opt_alg.h  user_funs.cpp  user_funs.h  wyniki_lab2_symulacja.csv  wyniki_lab2_tabela1.csv  wyniki_lab2_tabela2.csv  wyniki_lab2_tabela3.csv  wyniki_lab2_wykres_pelny.csv
